--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,5 +1,5 @@
 
-foo = foo version 2 ergou test
+foo = test for xiaoxizongxian  rabbitmq
 democonfigclient.message=hello spring io
 
 # routes to serviceId
